見た目の整形

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./main.css">
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script> 
 </head>
@@ -12,15 +13,18 @@
   <div class="whole-wrapper">
     <main>
       <h1 class="title">フロントエンドフレームワークselect</h1>
+      <img src="./js.jpg" class="jspic">
       <p class="sub-title">あなたに合ったフロントエンドフレームワークを提案します</p>
+
       <div class="framework-wrapper">
-        <a href="https://angular.jp/ target="_blank" rel="noopener noreferrer"><p class="Angular">Angular</p></a>
-        <a href="https://v3.ja.vuejs.org/" target="_blank" rel="noopener noreferrer"><p class="Vue">Vue</p></a>
-        <a href="https://ja.reactjs.org/" target="_blank" rel="noopener noreferrer"><p class="React">React</p></a>
-        <a href="http://https://riot.js.org/ja/" target="_blank" rel="noopener noreferrer"></a><p class="Riot">Riot</p>
-        <a href="http://" target="_blank" rel="noopener noreferrer"><p class="Svelte">Svelte</p></a>
+        <a href="https://angular.jp/" target="blank"><p class="Angular">Angular</p></a>
+        <a href="https://v3.ja.vuejs.org/" target="blank"><p class="Vue">Vue</p></a>
+        <a href="https://ja.reactjs.org/" target="blank"><p class="React">React</p></a>
+        <a href="http://https://riot.js.org/ja/" target="blank"><p class="Riot">Riot</p></a>
+        <a href="https://svelte.dev/" target="blank"><p class="Svelte">Svelte</p></a>
       </div>
-      
+
+      <button class="start-geek">let's front geek!</button>
     </main> 
   </div>
 </body>
